k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: smart-manufacturing
  labels:
    app.kubernetes.io/part-of: smart-manufacturing
    istio-injection: enabled
